[workspace]
resolver = "2"
default-members = ["."]
members = [
  "crates/sorng-app-auth",
  "crates/sorng-app-domains",
  "crates/sorng-app-domains-cloud",
  "crates/sorng-app-domains-collab",
  "crates/sorng-app-domains-core",
  "crates/sorng-app-domains-ops",
  "crates/sorng-app-domains-platform",
  "crates/sorng-app-shell",
  "crates/sorng-core",
  "crates/sorng-auth",
  "crates/sorng-storage",
  "crates/sorng-network",
  "crates/sorng-ssh",
  "crates/sorng-rdp",
  "crates/sorng-rdp-vendor",
  "crates/sorng-aws-vendor",
  "crates/sorng-compression-vendor",
  "crates/sorng-opkssh-vendor",
  "crates/sorng-protocols",
  "crates/sorng-vpn",
  "crates/sorng-cloud",
  "crates/sorng-aws",
  "crates/sorng-remote-mgmt",
  "crates/sorng-gpo",
  "crates/sorng-ard",
  "crates/sorng-telnet",
  "crates/sorng-ftp",
  "crates/sorng-sftp",
  "crates/sorng-vnc",
  "crates/sorng-rustdesk",
  "crates/sorng-bitwarden",
  "crates/sorng-keepass",
  "crates/sorng-scp",
  "crates/sorng-mysql",
  "crates/sorng-postgres",
  "crates/sorng-mssql",
  "crates/sorng-sqlite",
  "crates/sorng-mongodb",
  "crates/sorng-redis",
  "crates/sorng-passbolt",
  "crates/sorng-ai-agent",
  "crates/sorng-powershell",
  "crates/sorng-1password",
  "crates/sorng-lastpass",
  "crates/sorng-google-passwords",
  "crates/sorng-dashlane",
  "crates/sorng-winmgmt",
  "crates/sorng-serial",
  "crates/sorng-hyperv",
  "crates/sorng-meshcentral",
  "crates/sorng-openvpn",
  "crates/sorng-vmware",
  "crates/sorng-proxmox",
  "crates/sorng-idrac",
  "crates/sorng-totp",
  "crates/sorng-mremoteng",
  "crates/sorng-termserv",
  "crates/sorng-whatsapp",
  "crates/sorng-telegram",
  "crates/sorng-dropbox",
  "crates/sorng-nextcloud",
  "crates/sorng-gdrive",
  "crates/sorng-onedrive",
  "crates/sorng-recording",
  "crates/sorng-gcp",
  "crates/sorng-azure",
  "crates/sorng-exchange",
  "crates/sorng-smtp",
  "crates/sorng-llm",
  "crates/sorng-ai-assist",
  "crates/sorng-terminal-themes",
  "crates/sorng-extensions",
  "crates/sorng-collaboration",
  "crates/sorng-gateway",
  "crates/sorng-biometrics",
  "crates/sorng-vault",
  "crates/sorng-vault-windows",
  "crates/sorng-p2p",
  "crates/sorng-tailscale",
  "crates/sorng-zerotier",
  "crates/sorng-wireguard",
  "crates/sorng-dns",
  "crates/sorng-k8s",
  "crates/sorng-docker",
  "crates/sorng-ansible",
  "crates/sorng-terraform",
  "crates/sorng-i18n",
  "crates/sorng-command-palette",
  "crates/sorng-fonts",
  "crates/sorng-secure-clip",
  "crates/sorng-budibase",
  "crates/sorng-osticket",
  "crates/sorng-jira",
  "crates/sorng-letsencrypt",
  "crates/sorng-ssh-agent",
  "crates/sorng-warpgate",
  "crates/sorng-ssh-scripts",
  "crates/sorng-mcp",
  "crates/sorng-snmp",
  "crates/sorng-bmc-common",
  "crates/sorng-ilo",
  "crates/sorng-lenovo",
  "crates/sorng-supermicro",
  "crates/sorng-synology",
  "crates/sorng-notifications",
  "crates/sorng-filters",
  "crates/sorng-hooks",
  "crates/sorng-scheduler",
  "crates/sorng-credentials",
  "crates/sorng-topology",
  "crates/sorng-replay",
  "crates/sorng-marketplace",
  "crates/sorng-dashboard",
  "crates/sorng-updater",
  "crates/sorng-rdpfile",
  "crates/sorng-portable",
  "crates/sorng-docker-compose",
  "crates/sorng-lxd",
  "crates/sorng-netbird",
  "crates/sorng-teleport",
  "crates/sorng-vmware-desktop",
  "crates/sorng-spice",
  "crates/sorng-nx",
  "crates/sorng-xdmcp",
  "crates/sorng-x2go",
  "crates/sorng-nginx",
  "crates/sorng-traefik",
  "crates/sorng-haproxy",
  "crates/sorng-apache",
  "crates/sorng-caddy",
  "crates/sorng-consul",
  "crates/sorng-nginx-proxy-mgr",
  "crates/sorng-postfix",
  "crates/sorng-gpg-agent",
  "crates/sorng-yubikey",
  "crates/sorng-opendkim",
  "crates/sorng-cyrus-sasl",
  "crates/sorng-dovecot",
  "crates/sorng-ddns",
  "crates/sorng-netmgr",
  "crates/sorng-netutils",
  "crates/sorng-clamav",
  "crates/sorng-rspamd",
  "crates/sorng-roundcube",
  "crates/sorng-spamassassin",
  "crates/sorng-proc",
  "crates/sorng-procmail",
  "crates/sorng-mailcow",
  "crates/sorng-amavis",
  "crates/sorng-remote-backup",
  "crates/sorng-fail2ban",
  "crates/sorng-cron",
  "crates/sorng-bootloader",
  "crates/sorng-time-ntp",
  "crates/sorng-os-detect",
  "crates/sorng-kernel",
  "crates/sorng-pam",
  "crates/sorng-cpanel",
  "crates/sorng-php",
  "crates/sorng-port-knock",
  "crates/sorng-about",
  "crates/sorng-mac",
  "crates/sorng-cicd",
  "crates/sorng-oracle-cloud",
  "crates/sorng-ipmi",
  "crates/sorng-cups",
  "crates/sorng-backup-verify",
  "crates/sorng-ceph",
  "crates/sorng-rabbitmq",
  "crates/sorng-kafka",
  "crates/sorng-pfsense",
  "crates/sorng-mysql-admin",
  "crates/sorng-postgres-admin",
  "crates/sorng-prometheus",
  "crates/sorng-grafana",
  "crates/sorng-ups",
  "crates/sorng-netbox",
  "crates/sorng-hashicorp-vault",
  "crates/sorng-zabbix",
  "crates/sorng-freeipa",
  "crates/sorng-dhcp",
  "crates/sorng-diskmgmt",
  "crates/sorng-etcd",
  "crates/sorng-filesharing",
  "crates/sorng-hetzner",
  "crates/sorng-ldap",
  "crates/sorng-packages",
  "crates/sorng-syslog",
  "crates/sorng-systemd",
  "crates/sorng-usermgmt",
  "crates/sorng-commands-ops",
  "crates/sorng-commands-infra",
  "crates/sorng-commands-mail",
  "crates/sorng-commands-services",
  "crates/sorng-commands-tools",
  "crates/sorng-commands-webservers",
  "crates/sorng-commands-cloud",
  "crates/sorng-commands-platform",
  "crates/sorng-commands-collab",
  "crates/sorng-commands-core",
  "crates/sorng-commands-sessions",
  "crates/sorng-commands-access",
  "crates/sorng-smb",
  "crates/sorng-probes",
]

[workspace.dependencies]
# ── Serialisation ─────────────────────────────────────────────────────
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# ── Async runtime ─────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# ── Framework ─────────────────────────────────────────────────────────
tauri = { version = "=2.10.3", features = ["devtools", "webview-data-url"] }

# ── HTTP / networking ─────────────────────────────────────────────────
# Minimal base — crates add features via { workspace = true, features = [...] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
url = "2.5"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
bytes = "1"
ssh2 = { version = "0.9", features = ["openssl-on-win32"] }
windows = "=0.62.2"
windows-sys = "=0.61.2"

# ── Database ──────────────────────────────────────────────────────────
# Keep SQLx exact and feature-less at the workspace root so crate-level
# manifests only opt into the specific backend/runtime features they need.
sqlx = { version = "=0.7.4", default-features = false }

# ── Cryptography ──────────────────────────────────────────────────────
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }

# ── VPN / proxy protocols ────────────────────────────────────────────
quinn = "0.11"
which = "7"
zeroize = "1"
defguard_wireguard_rs = "0.8"

# ── Common utilities ──────────────────────────────────────────────────
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "json", "std"] }
tracing-test = "0.2"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
cpal = "0.15"
rand = "0.8"
dirs = "=6.0.0"
regex = "1.10"
lazy_static = "1.4"
thiserror = "1.0"

# ── Testing ───────────────────────────────────────────────────────────
tokio-test = "0.4"
tempfile = "3.0"

[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }
# Used by build.rs to optionally inject a private updater endpoint
# (from env var `UPDATER_PRIVATE_ENDPOINT_URL`) into tauri.conf.json's
# `plugins.updater.endpoints` array at build time. See t3-e39 and
# `docs/release/private-updater-endpoint.md`.
serde_json = "1.0"

[dependencies]
sorng-app-auth = { path = "crates/sorng-app-auth" }
sorng-app-domains = { path = "crates/sorng-app-domains", default-features = false }
sorng-app-shell = { path = "crates/sorng-app-shell" }
sorng-core = { path = "crates/sorng-core" }
sorng-kafka = { path = "crates/sorng-kafka", optional = true, default-features = false }
sorng-opkssh = { path = "crates/sorng-opkssh", optional = true, default-features = false }
sorng-commands-ops = { path = "crates/sorng-commands-ops", optional = true }
sorng-commands-infra = { path = "crates/sorng-commands-infra", optional = true }
sorng-commands-mail = { path = "crates/sorng-commands-mail", optional = true }
sorng-commands-services = { path = "crates/sorng-commands-services", optional = true }
sorng-commands-tools = { path = "crates/sorng-commands-tools", optional = true }
sorng-commands-webservers = { path = "crates/sorng-commands-webservers", optional = true }
sorng-commands-cloud = { path = "crates/sorng-commands-cloud", optional = true }
sorng-commands-platform = { path = "crates/sorng-commands-platform", optional = true }
sorng-commands-collab = { path = "crates/sorng-commands-collab", optional = true }
sorng-commands-core = { path = "crates/sorng-commands-core", default-features = false }
sorng-commands-sessions = { path = "crates/sorng-commands-sessions", default-features = false }
sorng-commands-access = { path = "crates/sorng-commands-access", default-features = false }

serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri = { workspace = true }
tauri-plugin-log = "=2.8.0"
tauri-plugin-autostart = "=2.5.1"
tauri-plugin-dialog = "=2.6.0"
tauri-plugin-fs = "=2.4.5"
tauri-plugin-updater = "2"
tokio = { workspace = true }
dirs = { workspace = true }
tauri-plugin-window-state = "=2.4.1"
axum = "0.7"
secrecy = "0.8"

# ── TLS provider (used in run() for rustls CryptoProvider) ──────
rustls = { workspace = true, features = ["ring"] }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_UI_Input_KeyboardAndMouse"] }

[dev-dependencies]
sorng-ftp = { path = "crates/sorng-ftp" }
tokio-test = { workspace = true }
tempfile = { workspace = true }
mockall = "0.11"
serial_test = "2.0"
chrono = { workspace = true }
uuid = { workspace = true }

[features]
default = ["lean"]
lean = ["opkssh", "protocol-serial-dynamic"]
full = ["cert-auth", "cloud", "collab", "db-mongo", "db-mssql", "db-mysql", "db-postgres", "db-redis", "db-sqlite", "kafka", "logs-json", "opkssh-vendored-wrapper", "ops", "platform", "protocol-serial-dynamic", "rdp", "rdp-mf-decode", "rdp-software-decode", "rdp-snapshot", "script-engine", "tls-cert-details", "vpn-softether"]
cert-auth = ["sorng-app-domains/cert-auth"]
cloud = ["sorng-app-domains/cloud", "dep:sorng-commands-cloud"]
collab = ["sorng-app-domains/collab", "dep:sorng-commands-collab"]
db-mongo = ["sorng-app-domains/db-mongo", "sorng-commands-sessions/db-mongo"]
db-mssql = ["sorng-app-domains/db-mssql", "sorng-commands-sessions/db-mssql"]
db-mysql = ["sorng-app-domains/db-mysql", "sorng-commands-sessions/db-mysql"]
db-postgres = ["sorng-app-domains/db-postgres", "sorng-commands-sessions/db-postgres"]
db-redis = ["sorng-app-domains/db-redis", "sorng-commands-sessions/db-redis"]
db-sqlite = ["sorng-app-domains/db-sqlite", "sorng-commands-sessions/db-sqlite"]
# `kafka` dynamic-links against a system-installed librdkafka (t3-e38) —
# this is the v1.0 default. Users must install librdkafka ≥ 2.x via their
# OS package manager (apt/dnf/pacman/brew/vcpkg/winget). At runtime the
# `sorng-kafka::runtime_check` probe surfaces a typed `LibraryMissing`
# error with a per-OS install hint if the native library is absent.
# See `crates/sorng-kafka/README.md` for platform install instructions.
kafka = ["dep:sorng-kafka", "sorng-kafka/dynamic-linking", "sorng-commands-ops?/kafka", "sorng-app-domains/kafka"]
# `kafka-dynamic` is kept as an explicit alias of `kafka` for the v1.0
# release flow (CI invokes `--features kafka-dynamic`). Both pull the
# same `dynamic-linking` linking mode.
kafka-dynamic = ["dep:sorng-kafka", "sorng-kafka/dynamic-linking", "sorng-commands-ops?/kafka", "sorng-app-domains/kafka"]
# `kafka-static` compiles librdkafka from source via cmake and statically
# links it. Requires CMake + a C toolchain. Fails on Windows/MSYS64 due
# to mixed-slash path mangling — use `kafka` or `kafka-dynamic` there.
# Opt in explicitly; NOT part of release artifacts.
kafka-static = ["dep:sorng-kafka", "sorng-kafka/cmake-build", "sorng-commands-ops?/kafka", "sorng-app-domains/kafka"]
# OPKSSH wrapper linkage for release builds. The native bridge embeds when a
# pinned OPKSSH checkout and Go toolchain are available; otherwise the wrapper
# remains metadata-only and runtime status keeps CLI fallback explicit. Tauri
# and Docker production builds stage the wrapper artifact by default.
opkssh = ["dep:sorng-opkssh", "sorng-commands-core/opkssh"]
opkssh-vendored-wrapper = ["opkssh", "sorng-opkssh/vendored-wrapper"]
ops = ["sorng-app-domains/ops", "sorng-commands-core/ops", "dep:sorng-commands-ops", "dep:sorng-commands-infra", "dep:sorng-commands-mail", "dep:sorng-commands-services", "dep:sorng-commands-tools", "dep:sorng-commands-webservers"]
platform = ["sorng-app-domains/platform", "dep:sorng-commands-platform"]
rdp = ["sorng-app-domains/rdp", "sorng-commands-core/rdp"]
rdp-software-decode = ["sorng-app-domains/rdp-software-decode"]
rdp-mf-decode = ["sorng-app-domains/rdp-mf-decode"]
rdp-snapshot = ["sorng-app-domains/rdp-snapshot"]
script-engine = ["sorng-app-domains/script-engine"]
tls-cert-details = ["sorng-app-domains/tls-cert-details"]
# SoftEther VPN. Gates the softether module in sorng-vpn and the 7 Tauri
# commands (create/connect/disconnect/get/list/delete/update
# _softether_connection). Included in the `full` production feature set.
vpn-softether = ["sorng-app-domains/vpn-softether", "sorng-commands-core/vpn-softether"]
# Serial / RS-232 feature split (t3-e4). `protocol-serial` is the
# static/vendored dev/test variant — driver presence is assumed at
# build time, runtime probe is a no-op. `protocol-serial-dynamic`
# probes the host for the required serial driver at service init
# (libserialport.so.* / setserial on Linux, SetupAPI on Windows,
# IOKit always present on macOS); missing driver surfaces a typed
# `SerialError` with a per-OS install hint. Ship release bundles with
# `--features protocol-serial-dynamic` (already in the commands-core
# default set); disable with `--no-default-features` on
# sorng-commands-core if you want a build without serial wired.
protocol-serial = ["sorng-commands-core/protocol-serial"]
protocol-serial-dynamic = ["sorng-commands-core/protocol-serial-dynamic"]
# t3-e23: emit JSON-formatted tracing lines (for log aggregation / release builds).
logs-json = []

# ═══════════════════════════════════════════════════════════════════════
# Build performance profiles
# ═══════════════════════════════════════════════════════════════════════

[profile.dev]
# Enable incremental compilation (default, but be explicit).
incremental = true
# "unpacked" avoids generating a monolithic .pdb on Windows, which
# speeds up linking significantly.  Stabilised since Rust 1.73.
split-debuginfo = "unpacked"
# No debuginfo for first-party code — saves significant memory.
debug = 0

# Reduce debuginfo for third-party crates — heavy deps can OOM with
# full debuginfo.  Level 0 = no debuginfo for deps, freeing significant
# memory during the workspace build.
[profile.dev.package."*"]
debug = 0
# Optimise third-party crates in dev builds.  opt-level 1 gives the
# majority of the performance benefit of -O2 but uses significantly
# less memory during LLVM codegen.
opt-level = 1

# Optimise proc-macro / build-script crates at -O2.  These run on the
# host during compilation — faster proc-macros = faster macro_expand_crate.
[profile.dev.build-override]
opt-level = 2

# ── Per-crate overrides for memory-hungry deps ───────────────────────
# These crates have extreme generic expansion during typeck/codegen.
# A single codegen unit forces sequential LLVM work on one thread,
# which caps peak memory.  debug=0 avoids emitting debug info for
# crates we'll never step into.
[profile.dev.package.sqlx-postgres]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.sqlx-mysql]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.sqlx-core]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.sqlx-sqlite]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.sqlx-macros]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.sqlx-macros-core]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.rustls]
codegen-units = 1
opt-level = 1
debug = 0

# The `windows` crate (v0.61+) with Win32 features is enormous — hundreds
# of thousands of generated bindings.  Compiling with 8 CGUs + debuginfo
# exhausts 32 GB during typeck.
[profile.dev.package.windows]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.windows-core]
codegen-units = 1
opt-level = 1
debug = 0

[profile.dev.package.windows-sys]
codegen-units = 1
opt-level = 1
debug = 0

[profile.release]
# LTO = thin gives ~90% of full LTO speed-up at a fraction of the cost.
lto = "thin"
codegen-units = 1
strip = true

[patch.crates-io]
ironrdp-connector = { path = "patches/ironrdp-connector" }
ironrdp-blocking = { path = "patches/ironrdp-blocking" }
ironrdp-session = { path = "patches/ironrdp-session" }
ironrdp-dvc = { path = "patches/ironrdp-dvc" }
