[package]
name = "sorng-1password"
version = "0.1.0"
edition = "2021"
description = "1Password Connect Server integration with REST API client, vault/item/file management, SCIM filtering, field-level CRUD, TOTP support, password generation, watchtower breach monitoring, and service account authentication."

[dependencies]
sorng-core = { path = "../sorng-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.9.5", features = ["devtools"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json", "cookies", "multipart"] }
base64 = "0.21"
url = "2"
thiserror = "1"
sha2 = "0.10"
rand = "0.8"
hmac = "0.12"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
