[package]
name = "sorng-about"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Comprehensive about, licenses, attribution, and references for SortOfRemoteNG — all dependency licenses, authors, contributors, and library references."
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
