[package]
name = "sorng-ai-agent"
version = "0.1.0"
edition = "2021"
description = "AI Agent engine for SortOfRemote NG – multi-provider LLM backends, conversation management, tool/function calling, RAG, embeddings, streaming, prompt templates, workflow automation, and connection-aware AI assistance."

[dependencies]
sorng-core = { path = "../sorng-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.9.5", features = ["devtools"] }
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
log = "0.4"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "stream", "cookies"] }
tokio-stream = "0.1"
bytes = "1.0"
regex = "1.0"
tiktoken-rs = "0.5"
