[package]
name = "sorng-ai-agent"
version = "0.1.0"
edition = "2021"
description = "AI Agent engine for SortOfRemote NG – multi-provider LLM backends, conversation management, tool/function calling, RAG, embeddings, streaming, prompt templates, workflow automation, and connection-aware AI assistance."

[dependencies]
sorng-core = { path = "../sorng-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, features = ["stream", "cookies"] }
tokio-stream = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
tiktoken-rs = "0.5"
