[package]
name = "sorng-ai-assist"
version = "0.1.0"
edition = "2021"
description = "AI-powered SSH assistance — command autocomplete, error explanation, man page lookup, shell intelligence, and context-aware suggestions"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.9.5", features = ["devtools"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
fuzzy-matcher = "0.3"
sorng-llm = { path = "../sorng-llm" }
