[package]
name = "sorng-ai-assist"
version = "0.1.0"
edition = "2021"
description = "AI-powered SSH assistance — command autocomplete, error explanation, man page lookup, shell intelligence, and context-aware suggestions"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
fuzzy-matcher = "0.3"
sorng-llm = { path = "../sorng-llm" }
