[package]
name = "sorng-ansible"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Ansible automation management – inventory, playbooks, ad-hoc commands, roles, galaxy, vault, facts, and configuration"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.9.5", features = ["devtools"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
regex = "1.10"
dirs = "5.0"
