[package]
publish = false
name = "sorng-app-api"
version.workspace = true
edition = "2021"
description = "External REST API router and runtime configuration for SortOfRemote NG"

[dependencies]
sorng-app-domains = { path = "../sorng-app-domains", default-features = false, features = ["cloud"] }
anyhow = "1"
axum = "0.7"
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
hex = { workspace = true }
rand = { workspace = true }
secrecy = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
subtle = "2"
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
