[package]
name = "sorng-app-domains-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sorng-1password = { path = "../sorng-1password" }
sorng-ai-agent = { path = "../sorng-ai-agent" }
sorng-auth = { path = "../sorng-auth", default-features = false }
sorng-biometrics = { path = "../sorng-biometrics" }
sorng-bitwarden = { path = "../sorng-bitwarden" }
sorng-core = { path = "../sorng-core" }
sorng-dashlane = { path = "../sorng-dashlane" }
sorng-ftp = { path = "../sorng-ftp" }
sorng-google-passwords = { path = "../sorng-google-passwords" }
sorng-gpo = { path = "../sorng-gpo" }
sorng-keepass = { path = "../sorng-keepass" }
sorng-lastpass = { path = "../sorng-lastpass" }
sorng-mongodb = { path = "../sorng-mongodb", optional = true }
sorng-mssql = { path = "../sorng-mssql", optional = true }
sorng-mysql = { path = "../sorng-mysql", optional = true }
sorng-network = { path = "../sorng-network" }
sorng-passbolt = { path = "../sorng-passbolt" }
sorng-postgres = { path = "../sorng-postgres", optional = true }
sorng-probes = { path = "../sorng-probes", default-features = false }
sorng-protocols = { path = "../sorng-protocols", default-features = false }
sorng-rdp = { path = "../sorng-rdp", optional = true }
sorng-redis = { path = "../sorng-redis", optional = true }
sorng-remote-mgmt = { path = "../sorng-remote-mgmt" }
sorng-rustdesk = { path = "../sorng-rustdesk" }
sorng-scp = { path = "../sorng-scp" }
sorng-serial = { path = "../sorng-serial" }
sorng-sftp = { path = "../sorng-sftp" }
sorng-smb = { path = "../sorng-smb" }
sorng-sqlite = { path = "../sorng-sqlite", optional = true }
sorng-ssh = { path = "../sorng-ssh", default-features = false }
sorng-storage = { path = "../sorng-storage" }
sorng-telnet = { path = "../sorng-telnet" }
sorng-totp = { path = "../sorng-totp" }
sorng-vault = { path = "../sorng-vault" }
sorng-vnc = { path = "../sorng-vnc" }
sorng-vpn = { path = "../sorng-vpn" }
sorng-openvpn = { path = "../sorng-openvpn" }

# ── t3-e55: remote-display protocols ─────────────────────────────────
sorng-ard = { path = "../sorng-ard" }
sorng-nx = { path = "../sorng-nx" }
sorng-spice = { path = "../sorng-spice" }
sorng-x2go = { path = "../sorng-x2go" }
sorng-xdmcp = { path = "../sorng-xdmcp" }

[features]
default = ["rdp"]
cert-auth = ["sorng-auth/cert-auth"]
db-mongo = ["dep:sorng-mongodb"]
db-mssql = ["dep:sorng-mssql"]
db-mysql = ["dep:sorng-mysql"]
db-postgres = ["dep:sorng-postgres"]
db-redis = ["dep:sorng-redis"]
db-sqlite = ["dep:sorng-sqlite"]
rdp = ["dep:sorng-rdp"]
rdp-software-decode = ["rdp", "sorng-rdp/software-decode"]
rdp-mf-decode = ["rdp", "sorng-rdp/mf-decode"]
rdp-snapshot = ["rdp", "sorng-rdp/snapshot"]
script-engine = ["sorng-ssh/script-engine"]
tls-cert-details = ["sorng-protocols/tls-cert-details"]
vpn-softether = ["sorng-vpn/vpn-softether"]
