[package]
name = "sorng-app-domains-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
sorng-about = { path = "../sorng-about" }
sorng-amavis = { path = "../sorng-amavis" }
sorng-ansible = { path = "../sorng-ansible" }
sorng-apache = { path = "../sorng-apache" }
sorng-bootloader = { path = "../sorng-bootloader" }
sorng-budibase = { path = "../sorng-budibase" }
sorng-caddy = { path = "../sorng-caddy" }
sorng-clamav = { path = "../sorng-clamav" }
sorng-cpanel = { path = "../sorng-cpanel" }
sorng-credentials = { path = "../sorng-credentials" }
sorng-cron = { path = "../sorng-cron" }
sorng-cyrus-sasl = { path = "../sorng-cyrus-sasl" }
sorng-dashboard = { path = "../sorng-dashboard" }
sorng-ddns = { path = "../sorng-ddns" }
sorng-dns = { path = "../sorng-dns" }
sorng-docker = { path = "../sorng-docker" }
sorng-dovecot = { path = "../sorng-dovecot" }
sorng-filters = { path = "../sorng-filters" }
sorng-gpg-agent = { path = "../sorng-gpg-agent" }
sorng-grafana = { path = "../sorng-grafana" }
sorng-haproxy = { path = "../sorng-haproxy" }
sorng-hooks = { path = "../sorng-hooks" }
sorng-i18n = { path = "../sorng-i18n" }
sorng-jira = { path = "../sorng-jira" }
sorng-k8s = { path = "../sorng-k8s" }
sorng-kernel = { path = "../sorng-kernel" }
sorng-letsencrypt = { path = "../sorng-letsencrypt" }
sorng-lxd = { path = "../sorng-lxd" }
sorng-mailcow = { path = "../sorng-mailcow" }
sorng-marketplace = { path = "../sorng-marketplace" }
sorng-mcp = { path = "../sorng-mcp" }
sorng-mysql-admin = { path = "../sorng-mysql-admin" }
sorng-netbox = { path = "../sorng-netbox" }
sorng-nginx = { path = "../sorng-nginx" }
sorng-nginx-proxy-mgr = { path = "../sorng-nginx-proxy-mgr" }
sorng-notifications = { path = "../sorng-notifications" }
sorng-opendkim = { path = "../sorng-opendkim" }
sorng-opkssh = { path = "../sorng-opkssh" }
sorng-os-detect = { path = "../sorng-os-detect" }
sorng-osticket = { path = "../sorng-osticket" }
sorng-p2p = { path = "../sorng-p2p" }
sorng-pam = { path = "../sorng-pam" }
sorng-pfsense = { path = "../sorng-pfsense" }
sorng-php = { path = "../sorng-php" }
sorng-port-knock = { path = "../sorng-port-knock" }
sorng-portable = { path = "../sorng-portable" }
sorng-postfix = { path = "../sorng-postfix" }
sorng-postgres-admin = { path = "../sorng-postgres-admin" }
sorng-proc = { path = "../sorng-proc" }
sorng-procmail = { path = "../sorng-procmail" }
sorng-prometheus = { path = "../sorng-prometheus" }
sorng-rdpfile = { path = "../sorng-rdpfile" }
sorng-replay = { path = "../sorng-replay" }
sorng-roundcube = { path = "../sorng-roundcube" }
sorng-rspamd = { path = "../sorng-rspamd" }
sorng-scheduler = { path = "../sorng-scheduler" }
sorng-snmp = { path = "../sorng-snmp" }
sorng-spamassassin = { path = "../sorng-spamassassin" }
sorng-ssh-agent = { path = "../sorng-ssh-agent" }
sorng-ssh-scripts = { path = "../sorng-ssh-scripts" }
sorng-tailscale = { path = "../sorng-tailscale" }
sorng-terraform = { path = "../sorng-terraform" }
sorng-time-ntp = { path = "../sorng-time-ntp" }
sorng-topology = { path = "../sorng-topology" }
sorng-traefik = { path = "../sorng-traefik" }
sorng-updater = { path = "../sorng-updater" }
sorng-ups = { path = "../sorng-ups" }
sorng-warpgate = { path = "../sorng-warpgate" }
sorng-wireguard = { path = "../sorng-wireguard" }
sorng-yubikey = { path = "../sorng-yubikey" }
sorng-zerotier = { path = "../sorng-zerotier" }
