[package]
name = "sorng-app-domains-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
sorng-hyperv = { path = "../sorng-hyperv" }
sorng-idrac = { path = "../sorng-idrac" }
sorng-ilo = { path = "../sorng-ilo" }
sorng-lenovo = { path = "../sorng-lenovo" }
sorng-meshcentral = { path = "../sorng-meshcentral" }
sorng-mremoteng = { path = "../sorng-mremoteng" }
sorng-proxmox = { path = "../sorng-proxmox" }
sorng-supermicro = { path = "../sorng-supermicro" }
sorng-synology = { path = "../sorng-synology" }
sorng-termserv = { path = "../sorng-termserv" }
sorng-vmware = { path = "../sorng-vmware" }
sorng-vmware-desktop = { path = "../sorng-vmware-desktop" }
