[package]
name = "sorng-app-domains"
version = "0.1.0"
edition = "2021"

[dependencies]
sorng-app-domains-cloud = { path = "../sorng-app-domains-cloud", optional = true }
sorng-app-domains-collab = { path = "../sorng-app-domains-collab", optional = true }
sorng-app-domains-core = { path = "../sorng-app-domains-core", default-features = false }
sorng-app-domains-ops = { path = "../sorng-app-domains-ops", optional = true }
sorng-app-domains-platform = { path = "../sorng-app-domains-platform", optional = true }

[features]
default = ["cloud", "collab", "ops", "platform", "rdp"]
cert-auth = ["sorng-app-domains-core/cert-auth"]
cloud = ["dep:sorng-app-domains-cloud"]
collab = ["dep:sorng-app-domains-collab"]
db-mongo = ["sorng-app-domains-core/db-mongo"]
db-mssql = ["sorng-app-domains-core/db-mssql"]
db-mysql = ["sorng-app-domains-core/db-mysql"]
db-postgres = ["sorng-app-domains-core/db-postgres"]
db-redis = ["sorng-app-domains-core/db-redis"]
db-sqlite = ["sorng-app-domains-core/db-sqlite"]
ops = ["dep:sorng-app-domains-ops"]
# t5-e5: forwards `kafka` through to the ops domain re-exports so that
# `domains::kafka` (→ `sorng_kafka`) is available to app-crate code when
# Kafka is enabled at the top-level. Only meaningful together with `ops`.
kafka = ["sorng-app-domains-ops?/kafka"]
platform = ["dep:sorng-app-domains-platform"]
rdp = ["sorng-app-domains-core/rdp"]
rdp-software-decode = ["sorng-app-domains-core/rdp-software-decode"]
rdp-mf-decode = ["sorng-app-domains-core/rdp-mf-decode"]
rdp-snapshot = ["sorng-app-domains-core/rdp-snapshot"]
script-engine = ["sorng-app-domains-core/script-engine"]
tls-cert-details = ["sorng-app-domains-core/tls-cert-details"]
vpn-softether = ["sorng-app-domains-core/vpn-softether"]
