[package]
publish = false
name = "sorng-app-shell"
version.workspace = true
edition = "2021"
description = "Tauri shell and desktop integration commands for the app crate"

[dependencies]
serde = { workspace = true }
tauri = { workspace = true }
dirs = { workspace = true }
tauri-plugin-autostart = "=2.5.1"
